bk_ida/gccida/g0/gen_type
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:785:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:787:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:790:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:792:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:838:14: error: expected expression
data_type = &::ret_val; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:842:65: error: subscript of pointer to incomplete type 'struct rtx_def'
data_type = concat( data_type, *( _QWORD *)&chain_p->int_cst.rtl[2], 0LL); 
                                            ~~~~~~~~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:878:24: error: use of undeclared identifier 'off_749F5E'
v7 = concat( ret_val, &off_749F5E, 0LL); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:896:14: error: expected expression
data_type = &::ret_val; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/c-aux-info.c:916:14: error: expected expression
data_type = &::ret_val; 
             ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_type/src/obj/c-aux-info.o] Error 1
